@@ -150,7 +150,8 @@
 * SumUp: Improve success_from and message_from methods [sinourain] #5087
 * Adyen: Send new ignore_threed_dynamic for success_from [almalee24] #5078
 * Plexo: Add flow field to capture, purchase, and auth [yunnydang] #5092
-* PayTrace:Always send name in billing_address [almalee24] #5086
+* PayTrace: Always send name in billing_address [almalee24] #5086
+* StripePI: Update eci format [almalee24] #5097
 
 
 == Version 1.135.0 (August 24, 2023)
